# epic

./: .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .rustc_info.json  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  NOTICE  README.md  ROADMAP.md  all-tests.sh  azure-pipelines.yml  build.rs  docker-compose.yml  edna.toml  flake.nix  rust-toolchain.toml  rustfmt.toml  shell.nix
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  epic-master-branch.yml  rust.yml
.hooks/: pre-commit
api/: Cargo.toml
api/src/: auth.rs  client.rs  foreign.rs  foreign_rpc.rs  handlers.rs  lib.rs  owner.rs  owner_rpc.rs  rest.rs  router.rs  tor.rs  tor_rpc.rs  types.rs  web.rs
api/src/handlers/: blocks_api.rs  chain_api.rs  mining_api.rs  peers_api.rs  pool_api.rs  server_api.rs  transactions_api.rs  utils.rs  version_api.rs
api/tests/: blocktemplate_tests.rs  commitment_tests.rs  rest.rs
bugreport/: Cargo.toml
bugreport/src/: main.rs
cdn/: Cargo.toml
cdn/src/: cdn.rs  download.rs  lib.rs  unzip.rs
chain/: Cargo.toml
chain/src/: chain.rs  error.rs  lib.rs  pipe.rs  store.rs  txhashset.rs  types.rs
chain/src/txhashset/: bitmap_accumulator.rs  rewindable_kernel_view.rs  txhashset.rs  utxo_view.rs
chain/tests/: bitmap_accumulator.rs  chain_test_helper.rs  data_file_integrity.rs  mine_simple_chain.rs  store_indices.rs  test_coinbase_maturity.rs  test_txhashset.rs  test_txhashset_archive.rs
config/: Cargo.toml
config/src/: comments.rs  config.rs  lib.rs  types.rs
core/: Cargo.toml
core/fuzz/: Cargo.toml
core/fuzz/fuzz_targets/: block_read.rs  compact_block_read.rs  transaction_read.rs
core/fuzz/src/: main.rs
core/src/: consensus.rs  core.rs  genesis.rs  genesis_old.rs  global.rs  lib.rs  macros.rs  pow.rs  ser.rs
core/src/core/: block.rs  block_fees.rs  block_sums.rs  committed.rs  compact_block.rs  foundation.rs  hash.rs  id.rs  merkle_proof.rs  pmmr.rs  transaction.rs  verifier_cache.rs
core/src/core/block/: feijoada.rs
core/src/core/pmmr/: backend.rs  pmmr.rs  readonly_pmmr.rs  rewindable_pmmr.rs
core/src/libtx/: aggsig.rs  build.rs  error.rs  mod.rs  proof.rs  reward.rs  secp_ser.rs
core/src/pow/: common.rs  cuckaroo.rs  cuckatoo.rs  error.rs  lean.rs  md5.rs  progpow.rs  randomx.rs  siphash.rs  types.rs
core/tests/: block.rs  common.rs  consensus.rs  core.rs  merkle_proof.rs  pmmr.rs  transaction.rs  vec_backend.rs  verification.rs  verifier_cache.rs
debian/: .gitignore  changelog  control  epic.postinst  foundation.json  foundation_floonet.json  rules
doc/: bugreports.org  build.md  code_structure.md  coinbase_maturity.md  contracts.md  crates.js  epic4bitcoiners.md  fast-sync.md  fast-sync_ES.md  intro.md  merkle.md  mmr.md  pruning.md  running.org  search-index.js  settings.html  source-files.js  state.md  stratum.md  table_of_contents.md  testnet_configuration.md  toc.md  windows.org
doc/api/: api.md  wallet_owner_api.md
doc/chain/: blocks_and_headers.md  chain_sync.md
doc/dandelion/: dandelion.md  simulation.md
doc/epic/: all.html  fn.info_strings.html  fn.log_build_info.html  fn.main.html  fn.real_main.html  index.html  sidebar-items.js
doc/epic_api/: all.html  enum.ErrorKind.html  enum.OutputType.html  enum.RouterError.html  enum.Solution.html  fn.json_response.html  fn.json_response_pretty.html  (+49 more)
etc/: Dockerfile  Dockerfile.build  Dockerfile.floonet  README.MD  crate-release.sh  get-tor-sha.sh  shell.nix  tor_signatures.txt
features/: epic_commands.feature  fork.feature  mine_chain.feature
keychain/: Cargo.toml
keychain/src/: base58.rs  extkey_bip32.rs  keychain.rs  lib.rs  mnemonic.rs  types.rs
p2p/: Cargo.toml
p2p/fuzz/: Cargo.toml
p2p/fuzz/fuzz_targets/: read_ban_reason.rs  read_get_peer_addrs.rs  read_hand.rs  read_headers.rs  read_locator.rs  read_msg_header.rs  read_peer_addr.rs  read_peer_addrs.rs  read_peer_error.rs  read_ping.rs  read_pong.rs  read_shake.rs  read_sock_addr.rs  read_tx_hashset_archive.rs  read_tx_hashset_request.rs
p2p/src/: conn.rs  handshake.rs  lib.rs  msg.rs  peer.rs  peers.rs  protocol.rs  serv.rs  store.rs  types.rs
p2p/src/tor/: address.rs  config.rs  mod.rs  process.rs
p2p/tests/: peer_handshake.rs  ser_deser.rs
pool/: Cargo.toml
pool/src/: lib.rs  pool.rs  transaction_pool.rs  types.rs
pool/tests/: block_building.rs  block_max_weight.rs  block_reconciliation.rs  coinbase_maturity.rs  common.rs  transaction_pool.rs
randomx-rust/: Cargo.toml  build.rs
servers/: Cargo.toml
servers/src/: common.rs  epic.rs  foundation.rs  lib.rs  mining.rs  webwallet.rs
servers/src/common/: adapters.rs  hooks.rs  stats.rs  types.rs
servers/src/epic/: dandelion_monitor.rs  seed.rs  server.rs  sync.rs  version.rs
servers/src/epic/sync/: body_sync.rs  header_sync.rs  state_sync.rs  syncer.rs
servers/src/mining/: mine_block.rs  stratumserver.rs  test_miner.rs
servers/src/webwallet/: server.rs
servers/tests/: api.rs  dandelion.rs  framework.rs  simulnet.rs  stratum.rs  wallet.rs
src/: lib.rs
store/: Cargo.toml
store/src/: leaf_set.rs  lib.rs  lmdb.rs  pmmr.rs  prune_list.rs  types.rs
store/tests/: lmdb.rs  pmmr.rs  prune_list.rs  test_bitmap.rs  utxo_set_perf.rs
tests/: cucumber.rs  cucumber_manual.rs
util/: Cargo.toml
util/src/: file.rs  format.rs  hex.rs  lib.rs  logger.rs  macros.rs  network.rs  rate_counter.rs  read_write.rs  secp_static.rs  types.rs  zip.rs
util/tests/: file.rs  zip.rs
wallet/: Cargo.toml
wallet-tool/: Cargo.toml
wallet/src/: command.rs  controller.rs  display.rs  error.rs  lib.rs  lmdb_wallet.rs  types.rs
wallet/src/adapters/: file.rs  http.rs  keybase.rs  mod.rs  null.rs
wallet/src/libwallet/: api.rs  error.rs  internal.rs  mod.rs  slate.rs  types.rs
wallet/src/libwallet/internal/: keys.rs  restore.rs  selection.rs  tx.rs  updater.rs
wallet/src/node_clients/: http.rs  mod.rs
wallet/src/test_framework/: mod.rs  testclient.rs
wallet/tests/: accounts.rs  check.rs  file.rs  libwallet.rs  repost.rs  restore.rs  self_send.rs  transaction.rs
windows/: installer.iss
(+2361 files in other folders)
