[package]
name = "epic"
version = "3.4.0"
authors = ["Epic Foundation <epiccash@brickabode.com>"]
description = "Simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/EpicCash/epic"
keywords = ["crypto", "epic", "mimblewimble"]
readme = "README.md"
exclude = ["**/*.epic", "**/*.epic2"]
build = "src/build/build.rs"
edition = "2018"

[workspace]
members = [
    "api",
    "chain",
    "config",
    "core",
    "keychain",
    "p2p",
    "servers",
    "store",
    "util",
    "pool",
    "bugreport",
]
exclude = ["etc/gen_gen"]

[[bin]]
name = "epic"
path = "src/bin/epic.rs"

[dependencies]
blake2-rfc = "0.2"
chrono = "0.4.4"
clap = { version = "2.31", features = ["yaml"] }
ctrlc = { version = "3.1", features = ["termination"] }
humansize = "1.1.0"
serde = "1"
futures = "0.3"
serde_json = "1"
log = "0.4"
term = "0.5"
failure = "0.1"
failure_derive = "0.1"
reqwest = "0.11.11"


tokio = { version = "1.32", features = ["full"] }

epic_api = { path = "./api", version = "3.4.0" }
epic_config = { path = "./config", version = "3.4.0" }
epic_core = { path = "./core", version = "3.4.0" }
epic_keychain = { path = "./keychain", version = "3.4.0" }
epic_p2p = { path = "./p2p", version = "3.4.0" }
epic_servers = { path = "./servers", version = "3.4.0" }
epic_util = { path = "./util", version = "3.4.0" }
epic_chain = { path = "./chain", version = "3.4.0" }

cursive = { version = "0.16", default-features = false, features = [
    "pancurses-backend",
] }

[target.'cfg(windows)'.dependencies.pancurses]
version = "0.16.1"
features = ["win32"]

[[test]]
name = "cucumber"
harness = false

[build-dependencies]
built = "0.3"

[dev-dependencies]
epic_store = { path = "./store", version = "3.4.0" }
cucumber_rust = { version = "^0.5.1", default-features = false }
