[package]
name = "epic"
version = "3.6.0"
authors = ["Epic Foundation <info@epiccash.com>"]
description = "Simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/EpicCash/epic"
keywords = ["crypto", "epic", "mimblewimble"]
readme = "README.md"
exclude = ["**/*.epic", "**/*.epic2"]
build = "src/build/build.rs"
edition = "2021"

[workspace]
members = [
    "api",
    "chain",
    "config",
    "core",
    "keychain",
    "p2p",
    "servers",
    "store",
    "util",
    "pool",
   
]
exclude = ["etc/gen_gen"]

[[bin]]
name = "epic"
path = "src/bin/epic.rs"

[dependencies]
time = "0.3"
blake2-rfc = "0.2"
chrono = "0.4"
clap = { version = "4.5" }
ctrlc = { version = "3.1", features = ["termination"] }
cursive_table_view = "0.15"
serde = "1"
futures = "0.3"
serde_json = "1"
log = "0.4"
term = "1.0"
thiserror = "2.0"
reqwest = "0.12"
num-bigint = "0.4"
tokio = { version = "1", features = ["full"] }

epic_api = { path = "./api", version = "3.6.0" }
epic_config = { path = "./config", version = "3.6.0" }
epic_core = { path = "./core", version = "3.6.0" }
epic_keychain = { path = "./keychain", version = "3.6.0" }
epic_p2p = { path = "./p2p", version = "3.6.0" }
epic_servers = { path = "./servers", version = "3.6.0" }
epic_util = { path = "./util", version = "3.6.0" }
epic_chain = { path = "./chain", version = "3.6.0" }

cursive = { version = "0.21.1", default-features = false, features = [
    "pancurses-backend",
] }

[target.'cfg(windows)'.dependencies.pancurses]
version = "0.16.1"
features = ["win32"]


[features]
cucumber-tests = []

[[test]]
name = "cucumber"
harness = false
required-features = ["cucumber-tests"]

[build-dependencies]
built = { version = "0.8", features = ["git2", "cargo-lock"] }

[dev-dependencies]
epic_store = { path = "./store", version = "3.6.0" }
cucumber_rust = { version = "^0.5.1", default-features = false }



