[package]
name = "epic_api"
version = "3.6.0"
authors = ["Epic Foundation <info@epiccash.com>"]
description = "APIs for epic, a simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/EpicCash/epic"
keywords = ["crypto", "epic", "mimblewimble"]
workspace = ".."
edition = "2021"

[dependencies]
easy-jsonrpc-mw = "0.5.4"

lazy_static = "1"
regex = "1"
ring = "0.17.14"
serde = "1"
serde_derive = "1"
serde_json = "1"
thiserror = "2.0.12"
log = "0.4"
tokio = { version = "1.32", features = ["full"] }
futures = "0.3"
url = "2.1"
num-bigint = "0.4"
bytes = "1.10.1"
subtle = "2.6.1"
tower = "0.5.2"
hyper = { version = "1.6.0", features = ["full"]}
http-body-util = "0.1.3"
hyper-util = { version = "0.1.13", features = ["server", "tokio"] }

# --- TLS (update to latest compatible) ---
hyper-rustls = "0.27"
hyper-tls = "0.6"
hyper-timeout = "0.5.2"
rustls = "0.23.27"
rustls-pemfile = "2.2.0"
tokio-rustls = "0.26.2"
pki-types = { package = "rustls-pki-types", version = "1.12.0" }





epic_core = { path = "../core", version = "3.6.0" }
epic_chain = { path = "../chain", version = "3.6.0" }
epic_p2p = { path = "../p2p", version = "3.6.0" }
epic_pool = { path = "../pool", version = "3.6.0" }
epic_store = { path = "../store", version = "3.6.0" }
epic_util = { path = "../util", version = "3.6.0" }
