[package]
name = "epic_chain"
version = "3.6.0"
authors = ["Epic Foundation <info@epiccash.com>"]
description = "Chain implementation for epic, a simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/EpicCash/epic"
keywords = ["crypto", "epic", "mimblewimble"]
workspace = ".."
edition = "2021"

[dependencies]
bit-vec = "0.8"
bitflags = "2.9.0"
byteorder = "1"
failure = "0.1"
failure_derive = "0.1"
croaring = "2.2.0"
log = "0.4"
serde = "1"
serde_derive = "1"
chrono = "0.4.31"
lru-cache = "0.1"
lazy_static = "1"
regex = "1"


epic_core = { path = "../core", version = "3.6.0" }
epic_keychain = { path = "../keychain", version = "3.6.0" }
epic_store = { path = "../store", version = "3.6.0" }
epic_util = { path = "../util", version = "3.6.0" }

[dev-dependencies]
env_logger = "0.11.7"
rand = "0.9.0"
