[package]
name = "epic_config"
version = "4.0.0"
authors = ["Epic Foundation <info@epiccash.com>"]
description = "Configuration for epic, a simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/EpicCash/epic"
keywords = ["crypto", "epic", "mimblewimble"]
workspace = ".."
edition = "2021"

[dependencies]
rand = "0.9.2"
serde = "1"
serde_derive = "1.0"
toml = "0.9.5"
dirs = "6.0"

epic_core = { path = "../core", version = "4.0.0" }
epic_servers = { path = "../servers", version = "4.0.0" }
epic_p2p = { path = "../p2p", version = "4.0.0" }
epic_util = { path = "../util", version = "4.0.0" }

[dev-dependencies]
pretty_assertions = "1.4"
