[package]
name = "epic_core"
version = "1.0.0"
authors = ["Epic Foundation <mimblewimble@lists.launchpad.net>"]
description = "Chain implementation for epic, a simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mimblewimble/epic"
keywords = [ "crypto", "epic", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
blake2-rfc = "0.2"
byteorder = "1"
croaring = "0.3.9"
enum_primitive = "0.1"
failure = "0.1"
failure_derive = "0.1"
lazy_static = "1"
lru-cache = "0.1"
num = "0.2"
num-bigint = "0.2"
rand = "0.6"
serde = "1"
serde_derive = "1"
serde_json = "1"
siphasher = "0.2"
uuid = { version = "0.6", features = ["serde", "v4"] }
log = "0.4"
chrono = { version = "0.4.4", features = ["serde"] }
md5 = "0.6.1"
bigint = "4.4.1"
keccak-hash = "0.2.0"
sha2 = "0.8.0"

epic_keychain = { path = "../keychain", version = "1.0.0" }
epic_util = { path = "../util", version = "1.0.0" }
randomx = { git = "https://gitlab.com/epiccash/randomx-rust.git", version="0.1.0" }
progpow = { git = "https://gitlab.com/epiccash/progpow-rust.git", version="0.1.0" }

[dev-dependencies]
serde_json = "1"
