[package]
name = "epic_core"
version = "3.6.0"
authors = ["Epic Foundation <info@epiccash.com>"]
description = "Chain implementation for epic, a simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/EpicCash/epic"
keywords = ["crypto", "epic", "mimblewimble"]
workspace = ".."
edition = "2021"

[dependencies]
blake2 = { package = "blake2-rfc", version = "0.2" }
byteorder = "1"
croaring = "2.2.0"
enum_primitive = "0.1"
thiserror = "2.0.12"
lazy_static = "1"
lru-cache = "0.1"

num-bigint = "0.4"
num-traits = "0.2"
rand = "0.9.0"
serde = "1"
serde_derive = "1"
serde_json = "1"
siphasher = "0.2"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
log = "0.4"
chrono = { version = "0.4.31", features = ["serde"] }
md5 = "0.6.1"

keccak-hash = "0.2.0"
sha2 = "0.8.0"
zeroize = "1.3.0"

keychain = { package = "epic_keychain", path = "../keychain", version = "3.6.0" }
util = { package = "epic_util", path = "../util", version = "3.6.0" }
randomx = { git = "https://github.com/EpicCash/randomx-rust.git", branch = "update_dependencies" }
progpow = { git = "https://github.com/johanneshahn/progpow-rust", branch = "update_dependencies" }


[dev-dependencies]
serde_json = "1"
