[package]
name = "epic_core"
version = "4.0.0"
authors = ["Epic Foundation <info@epiccash.com>"]
description = "Chain implementation for epic, a simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/EpicCash/epic"
keywords = ["crypto", "epic", "mimblewimble"]
workspace = ".."
edition = "2021"

[dependencies]
blake2 = { package = "blake2-rfc", version = "0.2" }
byteorder = "1"
croaring = "2.3.1"
enum_primitive = "0.1"
thiserror = "2.0"
lazy_static = "1"
lru-cache = "0.1"

num-bigint = "0.4"
num-traits = "0.2"
rand = "0.9.2"
serde = "1"
serde_derive = "1.0"
serde_json = "1.0"
siphasher = "1.0"
uuid = { version = "1.16", features = ["serde", "v4"] }
log = "0.4"
chrono = { version = "0.4.41", features = ["serde"] }
md5 = "0.8.0"

keccak-hash = "0.11"
sha2 = "0.10"
zeroize = "1.8.1"

keychain = { package = "epic_keychain", path = "../keychain", version = "4.0.0" }
util = { package = "epic_util", path = "../util", version = "4.0.0" }
randomx = { git = "https://github.com/EpicCash/randomx-rust.git", tag = "v0.2.0" }
progpow = { git = "https://github.com/EpicCash/progpow-rust", tag = "v0.2.0" }


[dev-dependencies]
serde_json = "1.0"
