[package]
name = "epic_keychain"
version = "3.5.2"
authors = ["Epic Foundation <info@epiccash.com>"]
description = "Chain implementation for epic, a simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/EpicCash/epic"
keywords = ["crypto", "epic", "mimblewimble"]
workspace = '..'
edition = "2021"

[dependencies]
byteorder = "1"
blake2-rfc = "0.2"
rand = "0.6"
log = "0.4"
serde = "1"
serde_derive = "1"
serde_json = "1"
uuid = { version = "0.6", features = ["serde", "v4"] }
lazy_static = "1"
zeroize = "1.3.0"

digest = "0.9"
hmac = "0.11"
ripemd160 = "0.9"
sha2 = "0.9"
pbkdf2 = "0.8"

epic_util = { path = "../util", version = "3.5.2" }
