[package]
name = "epic_keychain"
version = "3.6.0"
authors = ["Epic Foundation <info@epiccash.com>"]
description = "Chain implementation for epic, a simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/EpicCash/epic"
keywords = ["crypto", "epic", "mimblewimble"]
workspace = '..'
edition = "2021"

[dependencies]
byteorder = "1"
blake2-rfc = "0.2"
rand = "0.9.2"
log = "0.4"
serde = "1"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "1.16", features = ["serde", "v4"] }
lazy_static = "1"
zeroize = "1.8.1"

thiserror = "2.0"
digest = "0.10"
hmac = "0.12"
ripemd = "0.1"
sha2 = "0.10"
pbkdf2 = "0.12"

epic_util = { path = "../util", version = "3.6.0" }


