[package]
name = "epic_p2p"
version = "3.3.2"
authors = ["Epic Foundation <epiccash@brickabode.com>"]
description = "Chain implementation for epic, a simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/EpicCash/epic"
keywords = ["crypto", "epic", "mimblewimble"]
workspace = ".."
edition = "2018"

[dependencies]
bitflags = "1"
bytes = "0.4"
enum_primitive = "0.1"
lru-cache = "0.1"
net2 = "0.2"
num = "0.1"
rand = "0.6"
serde = "1"
serde_derive = "1"
tempfile = "3.0.5"
log = "0.4"
chrono = { version = "0.4.4", features = ["serde"] }

epic_core = { path = "../core", version = "3.3.2" }
epic_store = { path = "../store", version = "3.3.2" }
epic_util = { path = "../util", version = "3.3.2" }
epic_chain = { path = "../chain", version = "3.3.2" }

[dev-dependencies]
epic_pool = { path = "../pool", version = "3.3.2" }
