[package]
name = "epic_p2p"
version = "3.6.0"
authors = ["Epic Foundation <info@epiccash.com>"]
description = "Chain implementation for epic, a simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/EpicCash/epic"
keywords = ["crypto", "epic", "mimblewimble"]
workspace = ".."
edition = "2021"

[dependencies]
bitflags = { version = "2.9.0", features = ["serde"] }
bytes = "1.10.1"
enum_primitive = "0.1"
lru-cache = "0.1"
net2 = "0.2"
num = "0.4.3"
rand = "0.9.0"
serde = "1"
serde_derive = "1"
tempfile = "3.0.5"
log = "0.4"
chrono = { version = "0.4.31", features = ["serde"] }

epic_core = { path = "../core", version = "3.6.0" }
epic_store = { path = "../store", version = "3.6.0" }
epic_util = { path = "../util", version = "3.6.0" }
epic_chain = { path = "../chain", version = "3.6.0" }

[dev-dependencies]
epic_pool = { path = "../pool", version = "3.6.0" }
