[package]
name = "epic_p2p"
version = "4.0.0"
authors = ["Epic Foundation <info@epiccash.com>"]
description = "Chain implementation for epic, a simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/EpicCash/epic"
keywords = ["crypto", "epic", "mimblewimble"]
workspace = ".."
edition = "2021"

[dependencies]
bitflags = { version = "2.9.0", features = ["serde"] }
bytes = "1.10"
enum_primitive = "0.1"
lru-cache = "0.1"
net2 = "0.2"
num = "0.4"
rand = "0.9.2"
serde = "1"
serde_derive = "1.0"
tempfile = "3.0"
log = "0.4"
chrono = { version = "0.4.41", features = ["serde"] }
regex = "1.3"
timer = "0.2"
sysinfo = "0.36.1"
ed25519-dalek = "2.2.0"
x25519-dalek = "2.0.1"
data-encoding = "2"
sha3 = "0.10"
blake2-rfc = "0.2"

epic_core = { path = "../core", version = "4.0.0" }
epic_store = { path = "../store", version = "4.0.0" }
epic_util = { path = "../util", version = "4.0.0" }
epic_chain = { path = "../chain", version = "4.0.0" }
epic_keychain = { path = "../keychain", version = "4.0.0" }

[dev-dependencies]
epic_pool = { path = "../pool", version = "4.0.0" }
