[package]
name = "epic_pool"
version = "1.1.0-beta.2"
authors = ["Epic Foundation <mimblewimble@lists.launchpad.net>"]
description = "Chain implementation for epic, a simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mimblewimble/epic"
keywords = [ "crypto", "epic", "mimblewimble" ]
workspace = '..'
edition = "2018"

[dependencies]
blake2-rfc = "0.2"
rand = "0.6"
serde = "1"
serde_derive = "1"
log = "0.4"
chrono = "0.4.4"
failure = "0.1"
failure_derive = "0.1"

epic_core = { path = "../core", version = "1.1.0-beta.2" }
epic_keychain = { path = "../keychain", version = "1.1.0-beta.2" }
epic_store = { path = "../store", version = "1.1.0-beta.2" }
epic_util = { path = "../util", version = "1.1.0-beta.2" }

[dev-dependencies]
epic_chain = { path = "../chain", version = "1.1.0-beta.2" }
