[package]
name = "epic_pool"
version = "3.5.2"
authors = ["Epic Foundation <info@epiccash.com>"]
description = "Chain implementation for epic, a simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/EpicCash/epic"
keywords = ["crypto", "epic", "mimblewimble"]
workspace = '..'
edition = "2021"

[dependencies]
blake2-rfc = "0.2"
rand = "0.6"
serde = "1"
serde_derive = "1"
log = "0.4"
chrono = "0.4.31"
failure = "0.1"
failure_derive = "0.1"

epic_core = { path = "../core", version = "3.5.2" }
epic_keychain = { path = "../keychain", version = "3.5.2" }
epic_store = { path = "../store", version = "3.5.2" }
epic_util = { path = "../util", version = "3.5.2" }

[dev-dependencies]
epic_chain = { path = "../chain", version = "3.5.2" }
