[package]
name = "epic_pool"
version = "4.0.0"
authors = ["Epic Foundation <info@epiccash.com>"]
description = "Chain implementation for epic, a simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/EpicCash/epic"
keywords = ["crypto", "epic", "mimblewimble"]
workspace = '..'
edition = "2021"

[dependencies]
blake2-rfc = "0.2"
rand = "0.9.2"
serde = "1"
serde_derive = "1.0"
log = "0.4"
chrono = "0.4.41"
thiserror = "2.0"

epic_core = { path = "../core", version = "4.0.0" }
epic_keychain = { path = "../keychain", version = "4.0.0" }
epic_store = { path = "../store", version = "4.0.0" }
epic_util = { path = "../util", version = "4.0.0" }

[dev-dependencies]
epic_chain = { path = "../chain", version = "4.0.0" }
