[package]
name = "epic_servers"
version = "3.6.0"
authors = ["Epic Foundation <info@epiccash.com>"]
description = "Simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/EpicCash/epic"
keywords = ["crypto", "epic", "mimblewimble"]
workspace = ".."
edition = "2021"

[dependencies]
hyper = { version = "1.2", features = ["full"] }
hyper-util = "0.1"
http-body-util = "0.1"
bytes = "1.10"
hyper-rustls = "0.27"
rustls = "0.23"
rustls-pemfile ="2.2"
webpki = "0.22"
webpki-roots = "1.0"
pki-types = { package = "rustls-pki-types", version = "1.12.0" }

fs2 = "0.4"
futures = "0.3"
http = "1.3"
itertools = "0.14"
lmdb-zero = "0.4"
rand = "0.9"
serde = "1"
log = "0.4"
serde_derive = "1"
serde_json = "1"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"

clokwerk = "0.4"
trust-dns-resolver = "0.23"
walkdir = "2.2"


epic_api = { path = "../api", version = "3.6.0" }
epic_chain = { path = "../chain", version = "3.6.0" }
epic_core = { path = "../core", version = "3.6.0" }
epic_keychain = { path = "../keychain", version = "3.6.0" }
epic_p2p = { path = "../p2p", version = "3.6.0" }
epic_pool = { path = "../pool", version = "3.6.0" }
epic_store = { path = "../store", version = "3.6.0" }
epic_util = { path = "../util", version = "3.6.0" }
