[package]
name = "epic_store"
version = "3.6.0"
authors = ["Epic Foundation <info@epiccash.com>"]
description = "Simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/EpicCash/epic"
keywords = ["crypto", "epic", "mimblewimble"]
workspace = ".."
edition = "2021"

[dependencies]
byteorder = "1"
croaring = "2.2.0"
env_logger = "0.5"
libc = "0.2"
failure = "0.1"
failure_derive = "0.1"
lmdb-zero = "0.4.4"
memmap = "0.7"
tempfile = "3.0.5"
serde = "1"
serde_derive = "1"
log = "0.4"

epic_core = { path = "../core", version = "3.6.0" }
epic_util = { path = "../util", version = "3.6.0" }

[dev-dependencies]
chrono = "0.4.31"
rand = "0.6"
filetime = "0.2"
