[package]
name = "epic_store"
version = "4.0.0"
authors = ["Epic Foundation <info@epiccash.com>"]
description = "Simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/EpicCash/epic"
keywords = ["crypto", "epic", "mimblewimble"]
workspace = ".."
edition = "2021"

[dependencies]
byteorder = "1"
croaring = "2.3.1"
env_logger = "0.11"
libc = "0.2.175"
thiserror = "2.0"
lmdb-zero = "0.4"
memmap = "0.7"
tempfile = "3.0"
serde = "1.0"
serde_derive = "1.0"
log = "0.4"

epic_core = { path = "../core", version = "4.0.0" }
epic_util = { path = "../util", version = "4.0.0" }

[dev-dependencies]
chrono = "0.4.41"
rand = "0.9.2"
filetime = "0.2"
