[package]
name = "epic_util"
version = "1.0.0"
authors = ["Epic Foundation <mimblewimble@lists.launchpad.net>"]
description = "Simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mimblewimble/epic"
keywords = [ "crypto", "epic", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
backtrace = "0.3"
base64 = "0.9"
byteorder = "1"
lazy_static = "1"
rand = "0.6"
serde = "1"
serde_derive = "1"
log4rs = { version = "0.8.1", features = ["rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller"] }
log = "0.4"
walkdir = "2"
zip = { version = "0.5" }
parking_lot = {version = "0.6"}
zeroize = "0.5.2"

[dependencies.grin_secp256k1zkp]
git = "https://gitlab.com/unitonebeat/epic_secp256k1zkp.git"
features = ["bullet-proof-sizing"]
