[package]
name = "epic_util"
version = "3.5.2"
authors = ["Epic Foundation <epiccash@brickabode.com>"]
description = "Simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/EpicCash/epic"
keywords = ["crypto", "epic", "mimblewimble"]
workspace = ".."
edition = "2021"

[dependencies]
backtrace = "0.3"
base64 = "0.9"
byteorder = "1"
lazy_static = "1"
rand = "0.6"
serde = "1"
serde_derive = "1"
log4rs = { version = "0.8.1", features = [
    "rolling_file_appender",
    "compound_policy",
    "size_trigger",
    "fixed_window_roller",
] }
log = "0.4"
walkdir = "2"
zip = { version = "0.5.11", default-features = false }
parking_lot = { version = "0.6" }
zeroize = "1.3.0"

[dependencies.grin_secp256k1zkp]
#git = "https://github.com/mimblewimble/rust-secp256k1-zkp"
#tag = "epic_integration_29"
#path = "../../rust-secp256k1-zkp"
version = "0.7.5"
features = ["bullet-proof-sizing"]

[dev-dependencies]
serde_test = "1"
