[package]
name = "epic_wallet"
version = "1.0.1"
authors = ["Epic Foundation <mimblewimble@lists.launchpad.net>"]
description = "Simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mimblewimble/epic"
keywords = [ "crypto", "epic", "mimblewimble" ]
workspace = '..'
edition = "2018"

[dependencies]
blake2-rfc = "0.2"
byteorder = "1"
failure = "0.1"
failure_derive = "0.1"
futures = "0.1"
hyper = "0.12"
prettytable-rs = "0.7"
rand = "0.5"
serde = "1"
serde_derive = "1"
serde_json = "1"
log = "0.4"
term = "0.5"
tokio = "= 0.1.11"
tokio-core = "0.1"
tokio-retry = "0.1"
ring = "0.13"
uuid = { version = "0.6", features = ["serde", "v4"] }
url = "1.7.0"
chrono = { version = "0.4.4", features = ["serde"] }

epic_api = { path = "../api", version = "1.0.1" }
epic_core = { path = "../core", version = "1.0.1" }
epic_keychain = { path = "../keychain", version = "1.0.1" }
epic_store = { path = "../store", version = "1.0.1" }
epic_util = { path = "../util", version = "1.0.1" }
epic_chain = { path = "../chain", version = "1.0.1" }

[dev-dependencies]
epic_store = { path = "../store", version = "1.0.1" }
